5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1724_2527.log
== TEST (2019-05-14 11:35:17) 
-- CODE:
n=int(input("numero: "))
i=0
d=1
soma=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d=d+1
		i=i+1
	else:
		d=d+1
	print(d)
	print(i)


-- OUTPUT:
1
2
1
2
3
2
4
2
4
5
3
6
3
7
3
8
3
8
9
4
10
4
11
4
12
4
13
4
14
4
15
4
16
4
16
17
5
18
5
19
5
20
5
21
5
22
5
23
5
24
5
25
5
26
5
27
5
28
5
29
5
30
5
31
5
31
32
6
33
6
34
6
35
6
36
6
37
6
38
6
39
6
40
6
41
6
42
6
43
6
44
6
45
6
46
6
47
6
48
6
49
6
50
6
51
6
52
6
53
6
54
6
55
6
56
6
57
6
58
6
59
6
60
6
61
6
62
6
62
63
7
64
7
65
7
66
7
67
7
68
7
69
7
70
7
71
7
72
7
73
7
74
7
75
7
76
7
77
7
78
7
79
7
80
7
81
7
82
7
83
7
84
7
85
7
86
7
87
7
88
7
89
7
90
7
91
7
92
7
93
7
94
7
95
7
96
7
97
7
98
7
99
7
100
7
101
7
102
7
103
7
104
7
105
7
106
7
107
7
108
7
109
7
110
7
111
7
112
7
113
7
114
7
115
7
116
7
117
7
118
7
119
7
120
7
121
7
122
7
123
7
124
7
124
125
8
126
8
127
8
128
8
129
8
130
8
131
8
132
8
133
8
134
8
135
8
136
8
137
8
138
8
139
8
140
8
141
8
142
8
143
8
144
8
145
8
146
8
147
8
148
8
149
8
150
8
151
8
152
8
153
8
154
8
155
8
156
8
157
8
158
8
159
8
160
8
161
8
162
8
163
8
164
8
165
8
166
8
167
8
168
8
169
8
170
8
171
8
172
8
173
8
174
8
175
8
176
8
177
8
178
8
179
8
180
8
181
8
182
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:32) 
-- CODE:
n=int(input("numero: "))
i=0
d=1
soma=0
while(d<=n):
	if((n%d)==0):
		print(d)
		i=i+1
	d=d+1
		soma=soma+1
	print(d)
	print(i)


-- ERROR:
File "XXXX", line 10
    soma=soma+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
